[package]
name = "yac"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = "0.10.6"
clap = { version = "4.5.1", features = ["derive"] }
file-hashing = "0.1.2"
libloading = "0.8.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
walkdir = "2.5.0"
yac_build = { version = "*", path = "../yac_build" }
